--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Hello Everyone</title>
+		<title>Hello Everyone in Talenta</title>
 	</head>
 	<body>
 		<div align="center">
